Fix automatic scroll on sub pages when clicking on hash links and prevent horizontal scrolling. Change sidebar styles to match overall nav design. Add missing variable to lengths.scss for styling.

--- a/dev/scss/base/lengths.scss
+++ b/dev/scss/base/lengths.scss
@@ -14,6 +14,7 @@ $left-width:                176px;
 $border-size:               2px;
 $left-distance:             $left-width + ($border-size * 2);
 $standard-size-and-spacing: 4rem;
+$top-bottom-spacing:        2rem;
 
 /**
  * Margins
