--- a/dev/scss/main/intro.scss
+++ b/dev/scss/main/intro.scss
@@ -6,7 +6,6 @@
 div.intro {
 
   &-container {
-    margin-top: 3rem;
     display: flex;
     gap: $standard-size-and-spacing;
   }
@@ -29,14 +28,9 @@ div.intro {
 @media all and (max-width: 42.5em) {
   div.intro {
     &-container {
-      margin-top: 1rem;
       flex-direction: column;
       gap: 1rem;
     }
   }
 }
-
-// aside.active:not(.off) ~ main div.intro {
-//   margin-left: $logo-left-distance - $standard-margin + $base-padding;
-// }
 
